[package]
name = "cron_next"
version = "0.1.0"
edition = "2021"
description = "cron_next is a tool base on cron_clock and tokio, make it easy to use with cron jobs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
cron_clock = "0.8"
